2009-03-17  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed a little issue. It was possible for the user in
	  memory sound against tux to click on as many card she wants
	  if she does not wait for the end of the sound.
	  merged from trunk 3782

	* src/boards/memory.c: (memory_next_level), (check_win),
	(item_event):

2009-03-16  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixed melody activity, some sound files was not correct which
	made it sometimes imposible to complete.
	merged from trunk 3779

	* src/boards/memory.c:

2009-03-15  Bruno Coudoin  <bruno.coudoin@free.fr>

	- Replaced letter that differenciate blocks for
	  color blinds by ASCII symbols that are locale
	  agnostic.
	  merged from trunk 3775

	* src/boards/hanoi.c: (hanoi_create_item):

2009-03-14  Bruno coudoin  <bruno.coudoin@free.fr>

	Recompiled gnuchess on windows with the link option
	-mwindows to avoid the black dos windows being displayed when
	you start the chess game.

	* Makefile.mingw.in:

2009-03-14  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed an annoying bug in the locale selection.
	  Punjabi was twice in our internal list which makes
	  it impossible to access locale after Portuguese in
	  our list. It was possible to access locale by going
	  backward but really annoying.
	  Merged from trunk 3771

	* src/gcompris/config.c:

2009-03-12  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed a crash case by Miguel in the configuration.
	  in a languge setting configuration of an activity
	  if we change the language, gcompris crashes.
          commit trunk 3769

	* src/gcompris/board_config_combo.c:
	(gc_board_config_combo_locales_asset):

2009-03-10  Bruno coudoin  <bruno.coudoin@free.fr>

	Patch from Miguel that fixes the configuration
	of python activities (tuxpaint and login was crashing).
	Merge from trunk 3765 and 3766

	* src/boards/Makefile.am:
	* src/boards/py-mod-gcompris.c:
	(py_gc_board_config_window_display),